# SMathLib

./: CMakeLists.txt  SMathLib.sln
Examples/CompileTest/: CompileTest.vcxproj  CompileTest.vcxproj.filters  Main.cpp  Stdafx.cpp
Examples/Random/: Main.cpp  Random.vcxproj  Stdafx.cpp
SMathLib/: AxisAngle.cpp  AxisAngle.h  BarycentricCoords.h  CMakeLists.txt  CompareDouble.cpp  CompareDouble.h  Config.h  Constants.h  Distance.h  FPMaths.cpp  FPMaths.h  GeometryAlgo.h  Helpers.h  Matrix.cpp  Matrix.h  MinMax.h  PointAccessor.h  PointConverter.h  PointLine.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  RandomDoubleGenerator.cpp  RandomDoubleGenerator.h  RandomInt64Generator.cpp  RandomInt64Generator.h  RandomIntGenerator.cpp  RandomIntGenerator.h  SMathLib.vcxproj  SMathLib.vcxproj.filters  Spherical.h  Statistics.h  Trigono.cpp  Trigono.h  Types.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  (+2 more)
SMathLib/Impl/: GeometryAlgo.hpp  PointLine.hpp  Statistics.hpp  VectorAlgo.hpp  VectorOnStack.hpp
SMathLib/Platform/: version.rc.in
SMathLib/Platform/Windows/: Resource.h  SMathLib.rc
Sources/SMathLib/: AxisAngle.cpp  AxisAngle.h  BarycentricCoords.h  CompareDouble.cpp  CompareDouble.h  Config.h  Constants.h  Distance.h  FPMaths.cpp  FPMaths.h  GeometryAlgo.h  Helpers.h  Matrix.cpp  Matrix.h  MinMax.h  PointAccessor.h  PointConverter.h  PointLine.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  SMathLib.vcxproj  SMathLib.vcxproj.filters  Spherical.h  Statistics.h  Trigono.cpp  Trigono.h  Types.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  VectorAlgo.h  VectorOnStack.h
Sources/SMathLib/Impl/: GeometryAlgo.hpp  PointLine.hpp  Statistics.hpp  VectorAlgo.hpp  VectorOnStack.hpp
Sources/SMathLib/Platform/Windows/: Resource.h  SMathLib.rc
